--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
 @use './components/TutorialHeader/tutorial-header';
 @use './content/LandingPage/landing-page';
 @use './content/RepoPage/repo-page';
+@use './content/GithubPage/github-page';
+@use './content/GitlabPage/gitlab-page';
