feat(homebrew): add files

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,3 +3,4 @@
 @use './content/RepoPage/repo-page';
 @use './content/GithubPage/github-page';
 @use './content/GitlabPage/gitlab-page';
+@use './content/HomebrewPage/homebrew-page';
